# pedal

./: .gitignore  .vimrc  Cargo.toml  Makefile  README.md  all  bld  board  bootloader-psh  build-all  cln  copy-high-pass-over-template  g  gen-patch.sh  golden.all.out  golden.new-all.out  new-all  pedal.cpp  prepare-for-psh  psh  psh-openocd  push-board  rust-bld  show-log  t  vscode-push-board
blah/board/src/: lib.rs  rig.rs
blah/shared/src/filter/: high_pass.rs  low_pass.rs  pass_thru.rs  reso.rs
board/: Cargo.toml  build-all  g  gen-release-asm
board/src/: daisy_seed.rs  lib.rs  rustmain.rs
dsp/: Cargo.toml
dsp/src/: lib.rs  rig.rs  sim.rs  spew.rs
dsp/src/filter/: high_pass.rs  mod.rs
high_pass/: Makefile  bld  hw.h  load.cpp  pedal.cpp  psh
high_pass/patch/: Cargo.toml  build.rs  g
high_pass/patch/src/: lib.rs  main.rs
host/: Cargo.toml  build.rs  comp  g  t
host/src/: lib.rs  tests.rs
host/src/yin/: Yin.c
lib/board/: Cargo.toml  g
lib/board/src/: lib.rs  load.rs  rig.rs  spew.rs
lib/host/: Cargo.toml  g
lib/host/src/: lib.rs  sim.rs
lib/host/src/graphing/: mod.rs
lib/shared/: Cargo.toml  build-all  build-edsl-patches.sh  build.rs  g
lib/shared/src/: arm_fft.rs  bench.rs  benchmark_test.rs  canned_sound.rs  constants.rs  convert.rs  daisy_seed_board.rs  dilly.rs  fft.rs  fft_bench.rs  fft_board.rs  fft_host.rs  file.rs  frequency_matcher.rs  globby.rs  globby_board.rs  globby_host.rs  hop_fft.rs  hw_host.rs  inertial.rs  knob.rs  knob_board.rs  knob_dummy.rs  knob_host.rs  lib.rs  load.rs  load_host.rs  maxes.rs  mem.rs  microfft_fft.rs  microfft_sdram_fft.rs  minmax.rs  much_harm.rs  override.rs  panic.rs  patch.rs  playhead.rs  quadratic_interpolate.rs  rig.rs  rig_board.rs  (+27 more)
lib/shared/src/ds/: circbuf.rs  mod.rs
lib/shared/src/edsl/: cursor.rs  mod.rs  prim.rs
lib/shared/src/edsl/runtime/: buffer.rs  cursor.rs  edsl_circbuf.rs  mod.rs  prim.rs  range.rs  signal.rs  window.rs
lib/shared/src/edsl/wad/: compile.rs  mod.rs  node.rs
lib/shared/src/filter/: chorus.rs  delay.rs  edsl_high_pass.rs  edsl_low_pass.rs  edsl_low_pass_6.rs  edsl_nodey.rs  edsl_pass_thru.rs  envelope_follower.rs  fft_analyzer.rs  fuzz.rs  gain.rs  guitar_synth.rs  harmoneer.rs  high_pass.rs  interp.rs  knob_gain.rs  linear_vibrato.rs  low_pass.rs  mixer.rs  mod.rs  pass_thru.rs  reso.rs  seq.rs  sine.rs  sine_table.rs  speed_test.rs  sweep.rs  tremolo.rs  vibrato.rs  waveshaper.rs
lib/shared/src/graphing/: mod.rs
lib/shared/src/signal/: base.rs  combinators.rs  mod.rs
lib/shared/src/unit/: band_pass.rs  band_pass_bank.rs  band_pass_stack.rs  band_pass_stack_slow.rs  comb.rs  frequency_matching_band_pass_bank.rs  mod.rs  reso.rs
lib/shared/src/yin/: Yin.c
lib/shim/: Makefile  arm_fft.cpp  circbuf.cpp  circbuf.h  constants.h  daisy_seed.cpp  fft.cpp  g  knob.cpp  load.cpp  load.h  patch.cpp  patch.h  pedal.cpp  playhead.cpp  playhead.h  rig.cpp  shy_fft.cpp  speed_test.cpp  speed_test.h  spew.cpp  spew.h  switch.cpp  vibrato  vibrato.cpp  vibrato.h
low_pass/: Makefile  hw.cpp  load.cpp  spew.cpp
low_pass/patch/: Cargo.toml
low_pass/patch/src/: lib.rs
patch-template/: Makefile  bld  bootloader-psh  cln  load.h  pedal.cpp
patch-template/patch/: Cargo.toml
patch-template/patch/src/: lib.rs
shim/: Makefile  pedal.cpp  spew.h
src/: bin.rs  lib.rs
step/: Cargo.toml  g
step/src/: lib.rs
