[package]
name = "high_pass"
version = "0.1.0"
edition = "2021"

[lib]
name = "high_pass"
crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "sim"
path = "src/bin.rs"

[features]
#stdd = ["hound"]
stdd = []

[dependencies]
alloc-cortex-m = { version = "0.4.4"}
cortex-m = "0.7.7"
emballoc = "0.2.0"
libc = "0.2"
board = { path = "blah/board" }
shared = { path = "blah/shared" }
host = { path = "blah/host" }
