[package]
name = "pedalboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "pedalboard"
# This is required because this is linked into the final board binary by lib/shim/Makefile.
crate-type = ["staticlib"]

[profile.release]
debug = true
lto = "fat"

[features]
# Any crates that require std cannot be built for the board, and must be listed
# here; they must also be configured as optional dependencies.
#for_host = ["host"]

[dependencies]
alloc-cortex-m = { version = "0.4.4"}
cortex-m = "0.7.7"
emballoc = "0.2.0"
libc = "0.2"
shared = { path = "../lib/shared", features = [] }
#host = { path = "../lib/host", optional = true, features = ["for_host"] }
pedalhost = { path = "../host" } # , optional = true, features = ["for_host"] }
