[package]
name = "dsp"
version = "0.1.0"
edition = "2021"
# rust-version = "1.68"

[lib]
name = "dsp"
crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = { version = "0.4.4"}
libc = "0.2"
emballoc = "0.2.0"
