[package]
name = "dsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "dsp"
#crate-type = ["staticlib"] # Creates static lib

[features]
stdd = ["hound"]

[dependencies]
alloc-cortex-m = { version = "0.4.4"}
cortex-m = "0.7.7"
emballoc = "0.2.0"
libc = "0.2"

[target.'cfg( not( target = "thumbv7em-none-eabihf") )'.dependencies]
hound = { version = "3.5.1", optional = true }
