[package]
name = "pedalhost"
version = "0.1.0"
edition = "2021"

[lib]
name = "pedalhost"
#crate-type = ["staticlib"] # Creates static lib

[profile.release]
lto = "fat"

[features]
# Any crates that require std cannot be built for the board, and must be listed
# here; they must also be configured as optional dependencies.
for_host = ["shared"]

[dependencies]
alloc-cortex-m = { version = "0.4.4"}
cortex-m = "0.7.7"
emballoc = "0.2.0"
libc = "0.2"
#board = { path = "../lib/board" }
shared = { path = "../lib/shared", optional = true, features = ["for_host"] }
#host = { path = "../lib/host", optional = true, features = ["for_host"] }
